# FCCWorkspace

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  combined-limit.code-workspace  fccanalysis.code-workspace  install_venv.sh  pyproject.toml  requirements.txt  set_Combine.sh  setup.py  setup_Combine.sh  setup_CombinedLimit.sh  setup_FCC.sh  setup_FCCAnalyses.sh  setup_local.sh  userBatch.Config  userConfig.py
analysis/ZH/: evaluation.py  final_selection.py  final_selection_bdt.py  final_selection_syst.py  plots_bdt.py  plots_histo.py  preselection.py  preselection_bdt.py  train_bdt.py  userConfig.py
analysis/ZH/0-cutFlow/: cutflow_plots.py  cutflow_selection.py  userConfig.py
analysis/ZH/1-MVAInputs/: final_selection.py  plots_histo.py  preselection.py
analysis/ZH/2-BDT/: evaluation.py  process_input.py  train_bdt.py
analysis/ZH/3-Final/: final_selection_bdt.py  final_selection_syst.py  plots_bdt.py  preselection_bdt.py
analysis/ZH/4-Combine/: combine.py  fit.py  process_hist.py  results.py  selection_combine.py
analysis/ZH/5-Model-Independence/: bias_test.py  make_pseudo.py  plots.py  selection_decay.py
analysis/ZH/mva/: HiggsTools.h  evaluation.py  plots_bdt.py  preselection_bdt.py  process_input.py  train_bdt.py  userConfig.py
analysis/ZH/tools/: plotting.py  (+1 more)
functions/: FSR_recovery.h  functions.h  functions_hadronic.h  optimisation.h  optimization.h  utils.h
logbook/: logbook.md
setup/: CombinedLimit.sh  FCCAnalyses.sh  install_env.sh  local_env.sh  requirements.txt
workspaces/: combined-limit.code-workspace  fccanalysis.code-workspace
(+170 files in other folders)
