[project]
name = "FCCWorkspace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tom Fournier", email = "tom.fournier@cern.ch"},
]
dependencies = ["seaborn>=0.13.2", "uproot>=5.6.1", "tqdm>=4.67.1", "awkward>=2.8.1", "zfit>=0.25.0", "xgboost>=3.0.0", "scikit-learn>=1.6.1", "hyperopt>=0.2.7", "hpogrid>=1.3.3", "graphviz>=0.20.3", "pandas>=2.2.3", "atlasplots>=0.1.11", "plotter>=1.3.20", "matplotlib<3.8", "tikzplotlib"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
